...
                eventDates={eventDates}
                colors={colors}
                scrollToTodayRef={scrollToTodayRef}
            />

            <ScrollView
                testID="events-list"
                ref={scrollRef}
                contentContainerStyle={styles.listContent}
                showsVerticalScrollIndicator={false}
                scrollEventThrottle={32}
                onScroll={handleScroll}
                onScrollBeginDrag={handleScrollBeginDrag}
...
